--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ backdrop-filter: blur(5px);
     margin-top: -8px;
 }
 
-.Btn1{
+.Btn1, .Btn2{
     display: inline-block;
     border-style: none;
     border-radius: 5px;
@@ -112,9 +112,7 @@ backdrop-filter: blur(5px);
 transition: 0.3s;
 }
 .Btn1:hover, .Btn2:hover{
-    background-color: black;
     opacity: 50%;
-    color: white;
     text-decoration: underline;
 }
 
@@ -151,6 +149,10 @@ background-color: rgb(20, 20, 20);
     font-size: larger;
     user-select: none;
 }
+.Btn2{
+    color:orangered
+}
+
     </style>
 <div class="Topbarrr">
     <a class="link" href="https://sharkcores.github.io/scriptcore/">
@@ -182,6 +184,11 @@ background-color: rgb(20, 20, 20);
 <a class="link" href="https://www.shark-core.com" target="_blank">
     <button class="Btn1">SharkCore</button>
 </a>
+<a class="link3" href="https://www.sharkcores.github.io/Settings">
+    <button class="Btn2">Settings</button>
+</a>
+
+
 </div>
 <p class="ToS"> <span class="ToSTitle">Bug fixes</span> <br> <br> <br> 20.08.2022 <br> <br> Taskbar bugs fixed <br> Background Image bug fixed <br> -------------------</p>
 </body>
