--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@ background-color: rgb(20, 20, 20);
 <a class="link" href="https://www.shark-core.com" target="_blank">
     <button class="Btn1">SharkCore</button>
 </a>
-<a class="link3" href="https://www.sharkcores.github.io/Settings">
+<a class="link3" href="https://sharkcores.github.io/Settings/">
     <button class="Btn2">Settings</button>
 </a>
 
